# symbolicmode

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml  update_ver.yml
fuzzchmod/: README.md  genfuzz  testmodes
src/symbolicmode/: __init__.py
tests/: test_chmod.py  test_modes.py  test_up_symbolicperms.py
