[flake8]
max-line-length = 90

[tool.black]
line-length = 90

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "src"

[project]
name = "symbolicmode"
version = "0.2"
authors = [
  { name="Sean Reifschneider", email="jafo00@gmail.com" },
]
description = "Code to handle symbolic permissions like GNU chmod does ('a=rx,u+w')"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/linsomniac/symbolicmode"
"Bug Tracker" = "https://github.com/linsomniac/symbolicmode/issues"
